parse/parser.out
Created by PLY version 3.8 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> ast
Rule 1     ast -> class_list
Rule 2     class_list -> class_ast semi class_list
Rule 3     class_list -> class_ast semi
Rule 4     class_ast -> class type lbrace rbrace
Rule 5     class_ast -> class type lbrace feature_list rbrace
Rule 6     class_ast -> class type inherits type lbrace rbrace
Rule 7     class_ast -> class type inherits type lbrace feature_list rbrace
Rule 8     feature_list -> feature semi feature_list
Rule 9     feature_list -> feature semi
Rule 10    feature -> identifier colon type
Rule 11    feature -> identifier colon type larrow exp
Rule 12    feature -> identifier lparen formal_list rparen colon type lbrace exp rbrace
Rule 13    feature -> identifier lparen rparen colon type lbrace exp rbrace
Rule 14    formal_list -> formal comma formal_list
Rule 15    formal_list -> formal
Rule 16    formal -> identifier colon type
Rule 17    exp -> identifier larrow exp
Rule 18    exp -> exp dot identifier lparen param_list rparen
Rule 19    exp -> exp dot identifier lparen rparen
Rule 20    exp -> exp at type dot identifier lparen param_list rparen
Rule 21    exp -> exp at type dot identifier lparen rparen
Rule 22    exp -> identifier lparen param_list rparen
Rule 23    exp -> identifier lparen rparen
Rule 24    param_list -> exp comma param_list
Rule 25    param_list -> exp
Rule 26    exp -> if exp then exp else exp fi
Rule 27    exp -> while exp loop exp pool
Rule 28    exp -> lbrace exp_list rbrace
Rule 29    exp_list -> exp semi exp_list
Rule 30    exp_list -> exp semi
Rule 31    exp -> let let_binding_list in exp
Rule 32    let_binding_list -> let_binding comma let_binding_list
Rule 33    let_binding_list -> let_binding
Rule 34    let_binding -> identifier colon type
Rule 35    let_binding -> identifier colon type larrow exp
Rule 36    exp -> case exp of case_elements esac
Rule 37    case_elements -> case_element semi case_elements
Rule 38    case_elements -> case_element semi
Rule 39    case_element -> identifier colon type rarrow exp
Rule 40    exp -> new type
Rule 41    exp -> isvoid exp
Rule 42    exp -> exp plus exp
Rule 43    exp -> exp minus exp
Rule 44    exp -> exp times exp
Rule 45    exp -> exp divide exp
Rule 46    exp -> tilde exp
Rule 47    exp -> exp lt exp
Rule 48    exp -> exp le exp
Rule 49    exp -> exp equals exp
Rule 50    exp -> not exp
Rule 51    exp -> lparen exp rparen
Rule 52    exp -> identifier
Rule 53    exp -> integer
Rule 54    exp -> string
Rule 55    exp -> true
Rule 56    exp -> false

Terminals, with rules where they appear

at                   : 20 21
case                 : 36
class                : 4 5 6 7
colon                : 10 11 12 13 16 34 35 39
comma                : 14 24 32
divide               : 45
dot                  : 18 19 20 21
else                 : 26
equals               : 49
error                : 
esac                 : 36
false                : 56
fi                   : 26
identifier           : 10 11 12 13 16 17 18 19 20 21 22 23 34 35 39 52
if                   : 26
in                   : 31
inherits             : 6 7
integer              : 53
isvoid               : 41
larrow               : 11 17 35
lbrace               : 4 5 6 7 12 13 28
le                   : 48
let                  : 31
loop                 : 27
lparen               : 12 13 18 19 20 21 22 23 51
lt                   : 47
minus                : 43
new                  : 40
not                  : 50
of                   : 36
plus                 : 42
pool                 : 27
rarrow               : 39
rbrace               : 4 5 6 7 12 13 28
rparen               : 12 13 18 19 20 21 22 23 51
semi                 : 2 3 8 9 29 30 37 38
string               : 54
then                 : 26
tilde                : 46
times                : 44
true                 : 55
type                 : 4 5 6 6 7 7 10 11 12 13 16 20 21 34 35 39 40
while                : 27

Nonterminals, with rules where they appear

ast                  : 0
case_element         : 37 38
case_elements        : 36 37
class_ast            : 2 3
class_list           : 1 2
exp                  : 11 12 13 17 18 19 20 21 24 25 26 26 26 27 27 29 30 31 35 36 39 41 42 42 43 43 44 44 45 45 46 47 47 48 48 49 49 50 51
exp_list             : 28 29
feature              : 8 9
feature_list         : 5 7 8
formal               : 14 15
formal_list          : 12 14
let_binding          : 32 33
let_binding_list     : 31 32
param_list           : 18 20 22 24

Parsing method: LALR

state 0

    (0) S' -> . ast
    (1) ast -> . class_list
    (2) class_list -> . class_ast semi class_list
    (3) class_list -> . class_ast semi
    (4) class_ast -> . class type lbrace rbrace
    (5) class_ast -> . class type lbrace feature_list rbrace
    (6) class_ast -> . class type inherits type lbrace rbrace
    (7) class_ast -> . class type inherits type lbrace feature_list rbrace

    class           shift and go to state 4

    class_ast                      shift and go to state 1
    class_list                     shift and go to state 3
    ast                            shift and go to state 2

state 1

    (2) class_list -> class_ast . semi class_list
    (3) class_list -> class_ast . semi

    semi            shift and go to state 5


state 2

    (0) S' -> ast .



state 3

    (1) ast -> class_list .

    $end            reduce using rule 1 (ast -> class_list .)


state 4

    (4) class_ast -> class . type lbrace rbrace
    (5) class_ast -> class . type lbrace feature_list rbrace
    (6) class_ast -> class . type inherits type lbrace rbrace
    (7) class_ast -> class . type inherits type lbrace feature_list rbrace

    type            shift and go to state 6


state 5

    (2) class_list -> class_ast semi . class_list
    (3) class_list -> class_ast semi .
    (2) class_list -> . class_ast semi class_list
    (3) class_list -> . class_ast semi
    (4) class_ast -> . class type lbrace rbrace
    (5) class_ast -> . class type lbrace feature_list rbrace
    (6) class_ast -> . class type inherits type lbrace rbrace
    (7) class_ast -> . class type inherits type lbrace feature_list rbrace

    $end            reduce using rule 3 (class_list -> class_ast semi .)
    class           shift and go to state 4

    class_ast                      shift and go to state 1
    class_list                     shift and go to state 7

state 6

    (4) class_ast -> class type . lbrace rbrace
    (5) class_ast -> class type . lbrace feature_list rbrace
    (6) class_ast -> class type . inherits type lbrace rbrace
    (7) class_ast -> class type . inherits type lbrace feature_list rbrace

    lbrace          shift and go to state 9
    inherits        shift and go to state 8


state 7

    (2) class_list -> class_ast semi class_list .

    $end            reduce using rule 2 (class_list -> class_ast semi class_list .)


state 8

    (6) class_ast -> class type inherits . type lbrace rbrace
    (7) class_ast -> class type inherits . type lbrace feature_list rbrace

    type            shift and go to state 10


state 9

    (4) class_ast -> class type lbrace . rbrace
    (5) class_ast -> class type lbrace . feature_list rbrace
    (8) feature_list -> . feature semi feature_list
    (9) feature_list -> . feature semi
    (10) feature -> . identifier colon type
    (11) feature -> . identifier colon type larrow exp
    (12) feature -> . identifier lparen formal_list rparen colon type lbrace exp rbrace
    (13) feature -> . identifier lparen rparen colon type lbrace exp rbrace

    rbrace          shift and go to state 14
    identifier      shift and go to state 13

    feature_list                   shift and go to state 11
    feature                        shift and go to state 12

state 10

    (6) class_ast -> class type inherits type . lbrace rbrace
    (7) class_ast -> class type inherits type . lbrace feature_list rbrace

    lbrace          shift and go to state 15


state 11

    (5) class_ast -> class type lbrace feature_list . rbrace

    rbrace          shift and go to state 16


state 12

    (8) feature_list -> feature . semi feature_list
    (9) feature_list -> feature . semi

    semi            shift and go to state 17


state 13

    (10) feature -> identifier . colon type
    (11) feature -> identifier . colon type larrow exp
    (12) feature -> identifier . lparen formal_list rparen colon type lbrace exp rbrace
    (13) feature -> identifier . lparen rparen colon type lbrace exp rbrace

    colon           shift and go to state 18
    lparen          shift and go to state 19


state 14

    (4) class_ast -> class type lbrace rbrace .

    semi            reduce using rule 4 (class_ast -> class type lbrace rbrace .)


state 15

    (6) class_ast -> class type inherits type lbrace . rbrace
    (7) class_ast -> class type inherits type lbrace . feature_list rbrace
    (8) feature_list -> . feature semi feature_list
    (9) feature_list -> . feature semi
    (10) feature -> . identifier colon type
    (11) feature -> . identifier colon type larrow exp
    (12) feature -> . identifier lparen formal_list rparen colon type lbrace exp rbrace
    (13) feature -> . identifier lparen rparen colon type lbrace exp rbrace

    rbrace          shift and go to state 21
    identifier      shift and go to state 13

    feature_list                   shift and go to state 20
    feature                        shift and go to state 12

state 16

    (5) class_ast -> class type lbrace feature_list rbrace .

    semi            reduce using rule 5 (class_ast -> class type lbrace feature_list rbrace .)


state 17

    (8) feature_list -> feature semi . feature_list
    (9) feature_list -> feature semi .
    (8) feature_list -> . feature semi feature_list
    (9) feature_list -> . feature semi
    (10) feature -> . identifier colon type
    (11) feature -> . identifier colon type larrow exp
    (12) feature -> . identifier lparen formal_list rparen colon type lbrace exp rbrace
    (13) feature -> . identifier lparen rparen colon type lbrace exp rbrace

    rbrace          reduce using rule 9 (feature_list -> feature semi .)
    identifier      shift and go to state 13

    feature                        shift and go to state 12
    feature_list                   shift and go to state 22

state 18

    (10) feature -> identifier colon . type
    (11) feature -> identifier colon . type larrow exp

    type            shift and go to state 23


state 19

    (12) feature -> identifier lparen . formal_list rparen colon type lbrace exp rbrace
    (13) feature -> identifier lparen . rparen colon type lbrace exp rbrace
    (14) formal_list -> . formal comma formal_list
    (15) formal_list -> . formal
    (16) formal -> . identifier colon type

    rparen          shift and go to state 24
    identifier      shift and go to state 27

    formal                         shift and go to state 26
    formal_list                    shift and go to state 25

state 20

    (7) class_ast -> class type inherits type lbrace feature_list . rbrace

    rbrace          shift and go to state 28


state 21

    (6) class_ast -> class type inherits type lbrace rbrace .

    semi            reduce using rule 6 (class_ast -> class type inherits type lbrace rbrace .)


state 22

    (8) feature_list -> feature semi feature_list .

    rbrace          reduce using rule 8 (feature_list -> feature semi feature_list .)


state 23

    (10) feature -> identifier colon type .
    (11) feature -> identifier colon type . larrow exp

    semi            reduce using rule 10 (feature -> identifier colon type .)
    larrow          shift and go to state 29


state 24

    (13) feature -> identifier lparen rparen . colon type lbrace exp rbrace

    colon           shift and go to state 30


state 25

    (12) feature -> identifier lparen formal_list . rparen colon type lbrace exp rbrace

    rparen          shift and go to state 31


state 26

    (14) formal_list -> formal . comma formal_list
    (15) formal_list -> formal .

    comma           shift and go to state 32
    rparen          reduce using rule 15 (formal_list -> formal .)


state 27

    (16) formal -> identifier . colon type

    colon           shift and go to state 33


state 28

    (7) class_ast -> class type inherits type lbrace feature_list rbrace .

    semi            reduce using rule 7 (class_ast -> class type inherits type lbrace feature_list rbrace .)


state 29

    (11) feature -> identifier colon type larrow . exp
    (17) exp -> . identifier larrow exp
    (18) exp -> . exp dot identifier lparen param_list rparen
    (19) exp -> . exp dot identifier lparen rparen
    (20) exp -> . exp at type dot identifier lparen param_list rparen
    (21) exp -> . exp at type dot identifier lparen rparen
    (22) exp -> . identifier lparen param_list rparen
    (23) exp -> . identifier lparen rparen
    (26) exp -> . if exp then exp else exp fi
    (27) exp -> . while exp loop exp pool
    (28) exp -> . lbrace exp_list rbrace
    (31) exp -> . let let_binding_list in exp
    (36) exp -> . case exp of case_elements esac
    (40) exp -> . new type
    (41) exp -> . isvoid exp
    (42) exp -> . exp plus exp
    (43) exp -> . exp minus exp
    (44) exp -> . exp times exp
    (45) exp -> . exp divide exp
    (46) exp -> . tilde exp
    (47) exp -> . exp lt exp
    (48) exp -> . exp le exp
    (49) exp -> . exp equals exp
    (50) exp -> . not exp
    (51) exp -> . lparen exp rparen
    (52) exp -> . identifier
    (53) exp -> . integer
    (54) exp -> . string
    (55) exp -> . true
    (56) exp -> . false

    identifier      shift and go to state 49
    if              shift and go to state 36
    while           shift and go to state 47
    lbrace          shift and go to state 46
    let             shift and go to state 41
    case            shift and go to state 45
    new             shift and go to state 39
    isvoid          shift and go to state 38
    tilde           shift and go to state 35
    not             shift and go to state 43
    lparen          shift and go to state 42
    integer         shift and go to state 37
    string          shift and go to state 40
    true            shift and go to state 44
    false           shift and go to state 34

    exp                            shift and go to state 48

state 30

    (13) feature -> identifier lparen rparen colon . type lbrace exp rbrace

    type            shift and go to state 50


state 31

    (12) feature -> identifier lparen formal_list rparen . colon type lbrace exp rbrace

    colon           shift and go to state 51


state 32

    (14) formal_list -> formal comma . formal_list
    (14) formal_list -> . formal comma formal_list
    (15) formal_list -> . formal
    (16) formal -> . identifier colon type

    identifier      shift and go to state 27

    formal_list                    shift and go to state 52
    formal                         shift and go to state 26

state 33

    (16) formal -> identifier colon . type

    type            shift and go to state 53


state 34

    (56) exp -> false .

    of              reduce using rule 56 (exp -> false .)
    dot             reduce using rule 56 (exp -> false .)
    at              reduce using rule 56 (exp -> false .)
    plus            reduce using rule 56 (exp -> false .)
    minus           reduce using rule 56 (exp -> false .)
    times           reduce using rule 56 (exp -> false .)
    divide          reduce using rule 56 (exp -> false .)
    lt              reduce using rule 56 (exp -> false .)
    le              reduce using rule 56 (exp -> false .)
    equals          reduce using rule 56 (exp -> false .)
    semi            reduce using rule 56 (exp -> false .)
    then            reduce using rule 56 (exp -> false .)
    rparen          reduce using rule 56 (exp -> false .)
    loop            reduce using rule 56 (exp -> false .)
    comma           reduce using rule 56 (exp -> false .)
    rbrace          reduce using rule 56 (exp -> false .)
    else            reduce using rule 56 (exp -> false .)
    pool            reduce using rule 56 (exp -> false .)
    fi              reduce using rule 56 (exp -> false .)
    in              reduce using rule 56 (exp -> false .)


state 35

    (46) exp -> tilde . exp
    (17) exp -> . identifier larrow exp
    (18) exp -> . exp dot identifier lparen param_list rparen
    (19) exp -> . exp dot identifier lparen rparen
    (20) exp -> . exp at type dot identifier lparen param_list rparen
    (21) exp -> . exp at type dot identifier lparen rparen
    (22) exp -> . identifier lparen param_list rparen
    (23) exp -> . identifier lparen rparen
    (26) exp -> . if exp then exp else exp fi
    (27) exp -> . while exp loop exp pool
    (28) exp -> . lbrace exp_list rbrace
    (31) exp -> . let let_binding_list in exp
    (36) exp -> . case exp of case_elements esac
    (40) exp -> . new type
    (41) exp -> . isvoid exp
    (42) exp -> . exp plus exp
    (43) exp -> . exp minus exp
    (44) exp -> . exp times exp
    (45) exp -> . exp divide exp
    (46) exp -> . tilde exp
    (47) exp -> . exp lt exp
    (48) exp -> . exp le exp
    (49) exp -> . exp equals exp
    (50) exp -> . not exp
    (51) exp -> . lparen exp rparen
    (52) exp -> . identifier
    (53) exp -> . integer
    (54) exp -> . string
    (55) exp -> . true
    (56) exp -> . false

    identifier      shift and go to state 49
    if              shift and go to state 36
    while           shift and go to state 47
    lbrace          shift and go to state 46
    let             shift and go to state 41
    case            shift and go to state 45
    new             shift and go to state 39
    isvoid          shift and go to state 38
    tilde           shift and go to state 35
    not             shift and go to state 43
    lparen          shift and go to state 42
    integer         shift and go to state 37
    string          shift and go to state 40
    true            shift and go to state 44
    false           shift and go to state 34

    exp                            shift and go to state 54

state 36

    (26) exp -> if . exp then exp else exp fi
    (17) exp -> . identifier larrow exp
    (18) exp -> . exp dot identifier lparen param_list rparen
    (19) exp -> . exp dot identifier lparen rparen
    (20) exp -> . exp at type dot identifier lparen param_list rparen
    (21) exp -> . exp at type dot identifier lparen rparen
    (22) exp -> . identifier lparen param_list rparen
    (23) exp -> . identifier lparen rparen
    (26) exp -> . if exp then exp else exp fi
    (27) exp -> . while exp loop exp pool
    (28) exp -> . lbrace exp_list rbrace
    (31) exp -> . let let_binding_list in exp
    (36) exp -> . case exp of case_elements esac
    (40) exp -> . new type
    (41) exp -> . isvoid exp
    (42) exp -> . exp plus exp
    (43) exp -> . exp minus exp
    (44) exp -> . exp times exp
    (45) exp -> . exp divide exp
    (46) exp -> . tilde exp
    (47) exp -> . exp lt exp
    (48) exp -> . exp le exp
    (49) exp -> . exp equals exp
    (50) exp -> . not exp
    (51) exp -> . lparen exp rparen
    (52) exp -> . identifier
    (53) exp -> . integer
    (54) exp -> . string
    (55) exp -> . true
    (56) exp -> . false

    identifier      shift and go to state 49
    if              shift and go to state 36
    while           shift and go to state 47
    lbrace          shift and go to state 46
    let             shift and go to state 41
    case            shift and go to state 45
    new             shift and go to state 39
    isvoid          shift and go to state 38
    tilde           shift and go to state 35
    not             shift and go to state 43
    lparen          shift and go to state 42
    integer         shift and go to state 37
    string          shift and go to state 40
    true            shift and go to state 44
    false           shift and go to state 34

    exp                            shift and go to state 55

state 37

    (53) exp -> integer .

    of              reduce using rule 53 (exp -> integer .)
    dot             reduce using rule 53 (exp -> integer .)
    at              reduce using rule 53 (exp -> integer .)
    plus            reduce using rule 53 (exp -> integer .)
    minus           reduce using rule 53 (exp -> integer .)
    times           reduce using rule 53 (exp -> integer .)
    divide          reduce using rule 53 (exp -> integer .)
    lt              reduce using rule 53 (exp -> integer .)
    le              reduce using rule 53 (exp -> integer .)
    equals          reduce using rule 53 (exp -> integer .)
    semi            reduce using rule 53 (exp -> integer .)
    then            reduce using rule 53 (exp -> integer .)
    rparen          reduce using rule 53 (exp -> integer .)
    loop            reduce using rule 53 (exp -> integer .)
    comma           reduce using rule 53 (exp -> integer .)
    rbrace          reduce using rule 53 (exp -> integer .)
    else            reduce using rule 53 (exp -> integer .)
    pool            reduce using rule 53 (exp -> integer .)
    fi              reduce using rule 53 (exp -> integer .)
    in              reduce using rule 53 (exp -> integer .)


state 38

    (41) exp -> isvoid . exp
    (17) exp -> . identifier larrow exp
    (18) exp -> . exp dot identifier lparen param_list rparen
    (19) exp -> . exp dot identifier lparen rparen
    (20) exp -> . exp at type dot identifier lparen param_list rparen
    (21) exp -> . exp at type dot identifier lparen rparen
    (22) exp -> . identifier lparen param_list rparen
    (23) exp -> . identifier lparen rparen
    (26) exp -> . if exp then exp else exp fi
    (27) exp -> . while exp loop exp pool
    (28) exp -> . lbrace exp_list rbrace
    (31) exp -> . let let_binding_list in exp
    (36) exp -> . case exp of case_elements esac
    (40) exp -> . new type
    (41) exp -> . isvoid exp
    (42) exp -> . exp plus exp
    (43) exp -> . exp minus exp
    (44) exp -> . exp times exp
    (45) exp -> . exp divide exp
    (46) exp -> . tilde exp
    (47) exp -> . exp lt exp
    (48) exp -> . exp le exp
    (49) exp -> . exp equals exp
    (50) exp -> . not exp
    (51) exp -> . lparen exp rparen
    (52) exp -> . identifier
    (53) exp -> . integer
    (54) exp -> . string
    (55) exp -> . true
    (56) exp -> . false

    identifier      shift and go to state 49
    if              shift and go to state 36
    while           shift and go to state 47
    lbrace          shift and go to state 46
    let             shift and go to state 41
    case            shift and go to state 45
    new             shift and go to state 39
    isvoid          shift and go to state 38
    tilde           shift and go to state 35
    not             shift and go to state 43
    lparen          shift and go to state 42
    integer         shift and go to state 37
    string          shift and go to state 40
    true            shift and go to state 44
    false           shift and go to state 34

    exp                            shift and go to state 56

state 39

    (40) exp -> new . type

    type            shift and go to state 57


state 40

    (54) exp -> string .

    of              reduce using rule 54 (exp -> string .)
    dot             reduce using rule 54 (exp -> string .)
    at              reduce using rule 54 (exp -> string .)
    plus            reduce using rule 54 (exp -> string .)
    minus           reduce using rule 54 (exp -> string .)
    times           reduce using rule 54 (exp -> string .)
    divide          reduce using rule 54 (exp -> string .)
    lt              reduce using rule 54 (exp -> string .)
    le              reduce using rule 54 (exp -> string .)
    equals          reduce using rule 54 (exp -> string .)
    semi            reduce using rule 54 (exp -> string .)
    then            reduce using rule 54 (exp -> string .)
    rparen          reduce using rule 54 (exp -> string .)
    loop            reduce using rule 54 (exp -> string .)
    comma           reduce using rule 54 (exp -> string .)
    rbrace          reduce using rule 54 (exp -> string .)
    else            reduce using rule 54 (exp -> string .)
    pool            reduce using rule 54 (exp -> string .)
    fi              reduce using rule 54 (exp -> string .)
    in              reduce using rule 54 (exp -> string .)


state 41

    (31) exp -> let . let_binding_list in exp
    (32) let_binding_list -> . let_binding comma let_binding_list
    (33) let_binding_list -> . let_binding
    (34) let_binding -> . identifier colon type
    (35) let_binding -> . identifier colon type larrow exp

    identifier      shift and go to state 60

    let_binding                    shift and go to state 59
    let_binding_list               shift and go to state 58

state 42

    (51) exp -> lparen . exp rparen
    (17) exp -> . identifier larrow exp
    (18) exp -> . exp dot identifier lparen param_list rparen
    (19) exp -> . exp dot identifier lparen rparen
    (20) exp -> . exp at type dot identifier lparen param_list rparen
    (21) exp -> . exp at type dot identifier lparen rparen
    (22) exp -> . identifier lparen param_list rparen
    (23) exp -> . identifier lparen rparen
    (26) exp -> . if exp then exp else exp fi
    (27) exp -> . while exp loop exp pool
    (28) exp -> . lbrace exp_list rbrace
    (31) exp -> . let let_binding_list in exp
    (36) exp -> . case exp of case_elements esac
    (40) exp -> . new type
    (41) exp -> . isvoid exp
    (42) exp -> . exp plus exp
    (43) exp -> . exp minus exp
    (44) exp -> . exp times exp
    (45) exp -> . exp divide exp
    (46) exp -> . tilde exp
    (47) exp -> . exp lt exp
    (48) exp -> . exp le exp
    (49) exp -> . exp equals exp
    (50) exp -> . not exp
    (51) exp -> . lparen exp rparen
    (52) exp -> . identifier
    (53) exp -> . integer
    (54) exp -> . string
    (55) exp -> . true
    (56) exp -> . false

    identifier      shift and go to state 49
    if              shift and go to state 36
    while           shift and go to state 47
    lbrace          shift and go to state 46
    let             shift and go to state 41
    case            shift and go to state 45
    new             shift and go to state 39
    isvoid          shift and go to state 38
    tilde           shift and go to state 35
    not             shift and go to state 43
    lparen          shift and go to state 42
    integer         shift and go to state 37
    string          shift and go to state 40
    true            shift and go to state 44
    false           shift and go to state 34

    exp                            shift and go to state 61

state 43

    (50) exp -> not . exp
    (17) exp -> . identifier larrow exp
    (18) exp -> . exp dot identifier lparen param_list rparen
    (19) exp -> . exp dot identifier lparen rparen
    (20) exp -> . exp at type dot identifier lparen param_list rparen
    (21) exp -> . exp at type dot identifier lparen rparen
    (22) exp -> . identifier lparen param_list rparen
    (23) exp -> . identifier lparen rparen
    (26) exp -> . if exp then exp else exp fi
    (27) exp -> . while exp loop exp pool
    (28) exp -> . lbrace exp_list rbrace
    (31) exp -> . let let_binding_list in exp
    (36) exp -> . case exp of case_elements esac
    (40) exp -> . new type
    (41) exp -> . isvoid exp
    (42) exp -> . exp plus exp
    (43) exp -> . exp minus exp
    (44) exp -> . exp times exp
    (45) exp -> . exp divide exp
    (46) exp -> . tilde exp
    (47) exp -> . exp lt exp
    (48) exp -> . exp le exp
    (49) exp -> . exp equals exp
    (50) exp -> . not exp
    (51) exp -> . lparen exp rparen
    (52) exp -> . identifier
    (53) exp -> . integer
    (54) exp -> . string
    (55) exp -> . true
    (56) exp -> . false

    identifier      shift and go to state 49
    if              shift and go to state 36
    while           shift and go to state 47
    lbrace          shift and go to state 46
    let             shift and go to state 41
    case            shift and go to state 45
    new             shift and go to state 39
    isvoid          shift and go to state 38
    tilde           shift and go to state 35
    not             shift and go to state 43
    lparen          shift and go to state 42
    integer         shift and go to state 37
    string          shift and go to state 40
    true            shift and go to state 44
    false           shift and go to state 34

    exp                            shift and go to state 62

state 44

    (55) exp -> true .

    of              reduce using rule 55 (exp -> true .)
    dot             reduce using rule 55 (exp -> true .)
    at              reduce using rule 55 (exp -> true .)
    plus            reduce using rule 55 (exp -> true .)
    minus           reduce using rule 55 (exp -> true .)
    times           reduce using rule 55 (exp -> true .)
    divide          reduce using rule 55 (exp -> true .)
    lt              reduce using rule 55 (exp -> true .)
    le              reduce using rule 55 (exp -> true .)
    equals          reduce using rule 55 (exp -> true .)
    semi            reduce using rule 55 (exp -> true .)
    then            reduce using rule 55 (exp -> true .)
    rparen          reduce using rule 55 (exp -> true .)
    loop            reduce using rule 55 (exp -> true .)
    comma           reduce using rule 55 (exp -> true .)
    rbrace          reduce using rule 55 (exp -> true .)
    else            reduce using rule 55 (exp -> true .)
    pool            reduce using rule 55 (exp -> true .)
    fi              reduce using rule 55 (exp -> true .)
    in              reduce using rule 55 (exp -> true .)


state 45

    (36) exp -> case . exp of case_elements esac
    (17) exp -> . identifier larrow exp
    (18) exp -> . exp dot identifier lparen param_list rparen
    (19) exp -> . exp dot identifier lparen rparen
    (20) exp -> . exp at type dot identifier lparen param_list rparen
    (21) exp -> . exp at type dot identifier lparen rparen
    (22) exp -> . identifier lparen param_list rparen
    (23) exp -> . identifier lparen rparen
    (26) exp -> . if exp then exp else exp fi
    (27) exp -> . while exp loop exp pool
    (28) exp -> . lbrace exp_list rbrace
    (31) exp -> . let let_binding_list in exp
    (36) exp -> . case exp of case_elements esac
    (40) exp -> . new type
    (41) exp -> . isvoid exp
    (42) exp -> . exp plus exp
    (43) exp -> . exp minus exp
    (44) exp -> . exp times exp
    (45) exp -> . exp divide exp
    (46) exp -> . tilde exp
    (47) exp -> . exp lt exp
    (48) exp -> . exp le exp
    (49) exp -> . exp equals exp
    (50) exp -> . not exp
    (51) exp -> . lparen exp rparen
    (52) exp -> . identifier
    (53) exp -> . integer
    (54) exp -> . string
    (55) exp -> . true
    (56) exp -> . false

    identifier      shift and go to state 49
    if              shift and go to state 36
    while           shift and go to state 47
    lbrace          shift and go to state 46
    let             shift and go to state 41
    case            shift and go to state 45
    new             shift and go to state 39
    isvoid          shift and go to state 38
    tilde           shift and go to state 35
    not             shift and go to state 43
    lparen          shift and go to state 42
    integer         shift and go to state 37
    string          shift and go to state 40
    true            shift and go to state 44
    false           shift and go to state 34

    exp                            shift and go to state 63

state 46

    (28) exp -> lbrace . exp_list rbrace
    (29) exp_list -> . exp semi exp_list
    (30) exp_list -> . exp semi
    (17) exp -> . identifier larrow exp
    (18) exp -> . exp dot identifier lparen param_list rparen
    (19) exp -> . exp dot identifier lparen rparen
    (20) exp -> . exp at type dot identifier lparen param_list rparen
    (21) exp -> . exp at type dot identifier lparen rparen
    (22) exp -> . identifier lparen param_list rparen
    (23) exp -> . identifier lparen rparen
    (26) exp -> . if exp then exp else exp fi
    (27) exp -> . while exp loop exp pool
    (28) exp -> . lbrace exp_list rbrace
    (31) exp -> . let let_binding_list in exp
    (36) exp -> . case exp of case_elements esac
    (40) exp -> . new type
    (41) exp -> . isvoid exp
    (42) exp -> . exp plus exp
    (43) exp -> . exp minus exp
    (44) exp -> . exp times exp
    (45) exp -> . exp divide exp
    (46) exp -> . tilde exp
    (47) exp -> . exp lt exp
    (48) exp -> . exp le exp
    (49) exp -> . exp equals exp
    (50) exp -> . not exp
    (51) exp -> . lparen exp rparen
    (52) exp -> . identifier
    (53) exp -> . integer
    (54) exp -> . string
    (55) exp -> . true
    (56) exp -> . false

    identifier      shift and go to state 49
    if              shift and go to state 36
    while           shift and go to state 47
    lbrace          shift and go to state 46
    let             shift and go to state 41
    case            shift and go to state 45
    new             shift and go to state 39
    isvoid          shift and go to state 38
    tilde           shift and go to state 35
    not             shift and go to state 43
    lparen          shift and go to state 42
    integer         shift and go to state 37
    string          shift and go to state 40
    true            shift and go to state 44
    false           shift and go to state 34

    exp_list                       shift and go to state 64
    exp                            shift and go to state 65

state 47

    (27) exp -> while . exp loop exp pool
    (17) exp -> . identifier larrow exp
    (18) exp -> . exp dot identifier lparen param_list rparen
    (19) exp -> . exp dot identifier lparen rparen
    (20) exp -> . exp at type dot identifier lparen param_list rparen
    (21) exp -> . exp at type dot identifier lparen rparen
    (22) exp -> . identifier lparen param_list rparen
    (23) exp -> . identifier lparen rparen
    (26) exp -> . if exp then exp else exp fi
    (27) exp -> . while exp loop exp pool
    (28) exp -> . lbrace exp_list rbrace
    (31) exp -> . let let_binding_list in exp
    (36) exp -> . case exp of case_elements esac
    (40) exp -> . new type
    (41) exp -> . isvoid exp
    (42) exp -> . exp plus exp
    (43) exp -> . exp minus exp
    (44) exp -> . exp times exp
    (45) exp -> . exp divide exp
    (46) exp -> . tilde exp
    (47) exp -> . exp lt exp
    (48) exp -> . exp le exp
    (49) exp -> . exp equals exp
    (50) exp -> . not exp
    (51) exp -> . lparen exp rparen
    (52) exp -> . identifier
    (53) exp -> . integer
    (54) exp -> . string
    (55) exp -> . true
    (56) exp -> . false

    identifier      shift and go to state 49
    if              shift and go to state 36
    while           shift and go to state 47
    lbrace          shift and go to state 46
    let             shift and go to state 41
    case            shift and go to state 45
    new             shift and go to state 39
    isvoid          shift and go to state 38
    tilde           shift and go to state 35
    not             shift and go to state 43
    lparen          shift and go to state 42
    integer         shift and go to state 37
    string          shift and go to state 40
    true            shift and go to state 44
    false           shift and go to state 34

    exp                            shift and go to state 66

state 48

    (11) feature -> identifier colon type larrow exp .
    (18) exp -> exp . dot identifier lparen param_list rparen
    (19) exp -> exp . dot identifier lparen rparen
    (20) exp -> exp . at type dot identifier lparen param_list rparen
    (21) exp -> exp . at type dot identifier lparen rparen
    (42) exp -> exp . plus exp
    (43) exp -> exp . minus exp
    (44) exp -> exp . times exp
    (45) exp -> exp . divide exp
    (47) exp -> exp . lt exp
    (48) exp -> exp . le exp
    (49) exp -> exp . equals exp

    semi            reduce using rule 11 (feature -> identifier colon type larrow exp .)
    dot             shift and go to state 74
    at              shift and go to state 71
    plus            shift and go to state 72
    minus           shift and go to state 73
    times           shift and go to state 69
    divide          shift and go to state 75
    lt              shift and go to state 70
    le              shift and go to state 67
    equals          shift and go to state 68


state 49

    (17) exp -> identifier . larrow exp
    (22) exp -> identifier . lparen param_list rparen
    (23) exp -> identifier . lparen rparen
    (52) exp -> identifier .
